Добавляем заголовок и 2 абзаца.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
    <title>Test Git Hub</title>
 </head>
 <body>
+   <h1>Lorem ipsum dolor.</h1>
+   <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo est quas dignissimos modi necessitatibus similique deserunt nobis cumque reiciendis neque. Nobis, magni. Qui quae praesentium, cupiditate dicta consectetur dolorem in!
+   </p>
+   <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis sit, beatae consequuntur quo facilis, modi soluta perferendis rerum magni optio doloribus porro reprehenderit consectetur molestiae voluptatum eum odit! Corporis, voluptatem?
+   </p>
    
 </body>
 </html>
